# aTox

./: .bazelrc  .editorconfig  .gitattributes  .gitignore  .travis.yml  BUILD.bazel  PRIVACY  README.md  WORKSPACE  azure-pipelines.yml  build.gradle  build.gradle.kts  detekt.yml  download-deps.bat  download-deps.sh  gradle.properties  settings.gradle  settings.gradle.kts
atox/: .gitignore  BUILD.bazel  build.gradle.kts  debug.keystore  proguard-tox4j.pro
atox/src/androidTest/kotlin/: IntegrationTest.kt
atox/src/androidTest/kotlin/ui/: AvatarFactoryTest.kt
atox/src/debug/res/values/: strings.xml
atox/src/main/: AndroidManifest.xml
atox/src/main/kotlin/: ActionReceiver.kt  Actions.kt  ActivityLauncher.kt  App.kt  AutoAway.kt  BootReceiver.kt  Extensions.kt  MainActivity.kt  NewMainActivity.kt  PendingIntentCompat.kt  ProximityScreenOff.kt  ReplyReceiver.kt  ToxService.kt  ToxVpnRunnable.kt  ToxVpnService.kt
atox/src/main/kotlin/di/: AndroidModule.kt  AppComponent.kt  AppInjector.kt  AppModule.kt  CoreModule.kt  DatabaseModule.kt  DomainModule.kt  ViewModelFactory.kt  ViewModelModule.kt
atox/src/main/kotlin/settings/: Settings.kt
atox/src/main/kotlin/tox/: BootstrapNodeRegistryImpl.kt  EventListenerCallbacks.kt  ToxStarter.kt
atox/src/main/kotlin/ui/: AvatarFactory.kt  AvatarImageView.kt  AvatarMaker.kt  BaseFragment.kt  ChatAdapter.kt  NotificationHelper.kt  ReceiveShareDialog.kt  ReceiveShareDialogFragment.kt  StatusDialog.kt  Util.kt
atox/src/main/res/anim/: fade_in.xml  fade_out.xml  slide_in_bottom.xml  slide_in_left.xml  slide_in_right.xml  slide_out_bottom.xml  slide_out_left.xml  slide_out_right.xml
atox/src/main/res/color/: box_stroke_color_day.xml  box_stroke_color_night.xml  hint_text_color_day.xml  hint_text_color_night.xml  status_available_color_list.xml  status_away_color_list.xml  status_busy_color_list.xml  trailing_icon_color_day.xml  trailing_icon_color_night.xml
atox/src/main/res/drawable/: attach_file.xml  back.xml  border.xml  bubble.xml  circle.xml  disable_ripple_effect.xml  gradient_contacts.xml  ic_available.xml  ic_away.xml  ic_back.xml  ic_back_white.xml  ic_bas.xml  ic_busy.xml  ic_call.xml  ic_call_end.xml  ic_chat.xml  ic_copy.xml  ic_copy_white.xml  ic_edit_black.xml  ic_edit_white.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_mic.xml  ic_mic_off.xml  ic_not_interested.xml  ic_person.xml  ic_qr_code.xml  ic_speakerphone.xml  ic_speakerphone_off.xml  ic_status.xml  ic_status_message.xml  message_divider.xml  notification_icon.xml  side_nav_bar_background.xml  status_background.xml
atox/src/main/res/layout/: action_received.xml  action_sent.xml  activity_main.xml  add_contact_fragment.xml  chat_action_received.xml  chat_action_sent.xml  chat_filetransfer.xml  chat_filetransfer_received.xml  chat_filetransfer_sent.xml  chat_fragment.xml  chat_message_received.xml  chat_message_sent.xml  contact_list_fragment.xml  contact_list_view_item.xml  contact_profile_fragment.xml  dialog_receive_share.xml  dialog_status.xml  edit_status_item.xml  edit_text_value_dialog.xml  filetransfer_received.xml  fragment_add_contact.xml  fragment_call.xml  fragment_chat.xml  fragment_contact_list.xml  fragment_contact_profile.xml  fragment_edit_user_profile.xml  fragment_friend_request.xml  fragment_profile.xml  fragment_settings.xml  fragment_user_profile.xml  friend_request_item.xml  message_received.xml  nav_header_contact_list.xml  new_activity_main.xml  new_fragment_settings.xml  profile_fragment.xml  profile_image_layout.xml  profile_options.xml  settings_fragment.xml  view_ongoing_call.xml
atox/src/main/res/menu/: activity_contact_list_drawer.xml  chat_message_context_menu.xml  chat_options_menu.xml  chat_send_long_press_menu.xml  contact_list_context_menu.xml  friend_request_context_menu.xml  ft_message_context_menu.xml  profile_options_menu.xml  user_profile_share_id_context_menu.xml
atox/src/main/res/mipmap-anydpi-v26/: launcher_icon.xml  launcher_icon_round.xml
atox/src/main/res/navigation/: nav_graph.xml  new_nav_graph.xml
atox/src/main/res/raw/: nodes.json
atox/src/main/res/values/: attrs.xml  (+7 more)
atox/src/main/res/values-ar/: strings.xml
atox/src/main/res/values-bg/: strings.xml
atox/src/main/res/values-bs/: strings.xml
atox/src/main/res/values-cs/: strings.xml
atox/src/main/res/values-de/: strings.xml
atox/src/main/res/values-el/: strings.xml
atox/src/main/res/values-es/: strings.xml
atox/src/main/res/values-et/: strings.xml
atox/src/main/res/values-eu/: strings.xml
atox/src/main/res/values-fa/: strings.xml
atox/src/main/res/values-fi/: strings.xml
atox/src/main/res/values-fr/: strings.xml
atox/src/main/res/values-hi/: strings.xml
atox/src/main/res/values-hr/: strings.xml
atox/src/main/res/values-hu/: strings.xml
atox/src/main/res/values-hy/: strings.xml
atox/src/main/res/values-in/: strings.xml
atox/src/main/res/values-is/: strings.xml
atox/src/main/res/values-it/: strings.xml
atox/src/main/res/values-iw/: strings.xml
atox/src/main/res/values-kmr/: strings.xml
atox/src/main/res/values-ko/: strings.xml
atox/src/main/res/values-lt/: strings.xml
atox/src/main/res/values-nb-rNO/: strings.xml
atox/src/main/res/values-night/: styles.xml
atox/src/main/res/values-night-v21/: styles.xml
atox/src/main/res/values-night-v23/: styles.xml
atox/src/main/res/values-nl/: strings.xml
atox/src/main/res/values-ny/: strings.xml
bazel/libvpx/: BUILD.bazel  vpx_config.asm  vpx_config.h  vpx_config.mk
bazel/opus/: BUILD.bazel
bazel/opus/android_arm/: config.h
bazel/opus/android_x86/: config.h
bazel/tools/config/: BUILD.bazel
core/: BUILD.bazel  build.gradle  build.gradle.kts
core/schemas/ltd.evilcorp.core.db.Database/: 1.json  2.json  3.json  4.json  5.json  6.json
core/src/androidTest/kotlin/: DatabaseMigrationTest.kt
core/src/main/: AndroidManifest.xml
domain/: .gitignore  BUILD.bazel  build.gradle.kts
domain/src/main/: AndroidManifest.xml
domain/src/main/kotlin/: Extensions.kt
domain/src/test/kotlin/: ToxIdValidatorTest.kt  ToxTypesTest.kt  ToxUtilTest.kt
(+514 files in other folders)
