load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library", "kt_jvm_test")

android_library(
    name = "core",
    custom_package = "ltd.evilcorp.core",
    visibility = ["//visibility:public"],
    exports = [
        "//core/src/main/kotlin/db",
        "//core/src/main/kotlin/di",
        "//core/src/main/kotlin/repository",
        "//core/src/main/kotlin/vo",
    ],
)

kt_jvm_test(
    name = "ConvertersTest",
    srcs = ["src/test/kotlin/db/ConvertersTest.kt"],
    test_class = "ltd.evilcorp.core.db.ConvertersTest",
    deps = [
        "//core/src/main/kotlin/db",
        "@maven//:junit_junit",
    ],
)
