load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")
load("@io_bazel_rules_kotlin//kotlin:core.bzl", "kt_ksp_plugin")

kt_android_library(
    name = "db",
    srcs = glob(["*.kt"]),
    custom_package = "ltd.evilcorp.core.db",
    plugins = [":androidx_room_room_compiler_plugin"],
    visibility = ["//core:__subpackages__"],
    deps = [
        "//core/src/main/kotlin/vo",
        "@maven//:androidx_room_room_ktx",
        "@maven//:androidx_room_room_runtime",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
    ],
)

kt_ksp_plugin(
    name = "androidx_room_room_compiler_plugin",
    generates_java = True,
    processor_class = "androidx.room.RoomKspProcessor",
    deps = ["@maven//:androidx_room_room_compiler"],
)
