load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")

kt_android_library(
    name = "di",
    srcs = glob(["*.kt"]),
    custom_package = "ltd.evilcorp.core.di",
    visibility = ["//visibility:public"],
    deps = [
        "//:dagger",
        "//core/src/main/kotlin/db",
        "@maven//:androidx_room_room_runtime",
        "@maven//:javax_inject_javax_inject",
    ],
)
